# CMake-CXX-Template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/TestLib/: test_lib.h
libs/: CMakeLists.txt
libs/src_test_lib/: src_private_test_lib.cpp  src_private_test_lib.h  src_pub_test_lib.cpp
